--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header img {
 #hero {
     text-align: center;
     padding: 80px 20px; /* Aumentado el espaciado para la sección de héroe */
-    background: linear-gradient(45deg, #6ffea4, hsl(212, 100%, 57%)); /* Degradado esquinado de verde a azul para todo el body */
+    background: linear-gradient(45deg, #0d6dea, hsl(238, 75%, 27%)); /* Degradado esquinado de verde a azul para todo el body */
     color: white;
 }
 
@@ -49,9 +49,25 @@ header img {
     margin-bottom: 20px;
 }
 
+.butBody {
+  display: inline-block;
+  background-color: #38c79c;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: background 0.3s;
+}
+
+.butBody:hover {
+  background-color: #3aebc7;
+}
+
+
 .button {
     display: inline-block;
-    background-color: #80dde287;
+    background-color: #3c70b96c;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
@@ -60,10 +76,11 @@ header img {
     transition: background 0.3s;
 }
 
-
 .button:hover {
-    background-color: #1c817b80;
+  background-color: #5f9de08c;
 }
+
+
 
 section {
     padding: 40px 20px;
