--- a/style.css
+++ b/style.css
@@ -49,25 +49,11 @@ header img {
     margin-bottom: 20px;
 }
 
-.butBody {
-  display: inline-block;
-  background-color: #252eac;
-  color: white;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
-  transition: background 0.3s;
-}
-
-.butBody:hover {
-  background-color: #3a81eb;
-}
 
 
 .button {
     display: inline-block;
-    background-color: #3143d29c;
+    background-color: #5f6abf80;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
@@ -77,7 +63,22 @@ header img {
 }
 
 .button:hover {
-  background-color: #267febbb;
+  background-color: #5890d5b2;
+}
+
+.butBody {
+  display: inline-block;
+  background-color: #2d4bc6;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  transition: background 0.3s;
+}
+
+.butBody:hover {
+  background-color: hsl(217, 70%, 54%);
 }
 
 
