Actualización de la página

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    color: 232323;
+    color: #20287b;
     text-align: left;
     padding: 20px 20px; /* Espaciado extra en el header */
 }
